--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Color Picker</title>
+    <title>Color Switch</title>
     <link href="./style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <canvas id="canvas" width="300" height="300">
-
+           Oops,your browser does not support the application.
         </canvas>
         <script src="./script.js" type="text/javascript"></script>
     </body>
